<resources>
    <string name="app_name">InventoryAppFlutterWaveAssessment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="qty">Qty:</string>
    <string name="price">Price:</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="total_stock">Total Stock</string>
    <string name="add_done">Add done</string>
    <string name="name_is_required_and_must_be_unique">Name is required and must be unique</string>
    <string name="description_must_be_at_least_three_words">Description must be at least three words</string>
    <string name="price_is_required_and_must_be_a_number">Price is required and must be a number</string>
    <string name="qty_is_required_and_must_be_a_number">Qty is required and must be a number</string>
    <string name="deleted_done">Deleted done</string>
    <string name="update_done">Update done</string>
    <string name="invalid_email_can_t_log_in">Invalid Email. Can\'t log in</string>
    <string name="password_must_not_be_empty">Password must not be empty</string>
    <string name="okay">Okay</string>
    <string name="no">No</string>
    <string name="you_are_about_to_delete">"You are about to delete %1$s ? "</string>
</resources>